[package]
name = "structopt-flags"
version = "0.2.0"
authors = ["Luca Pizzamiglio <luca.pizzamiglio@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
categories = ["command-line-interface"]
keywords = ["clap","structopt","cli","flags"]
repository = "https://github.com/pizzamig/structopt-flags"
description = "Collection of reusable flags for StructOpt"
build = "build.rs"

[badges]
travis-ci = { repository = "pizzamig/structopt-flags" }
maintenance = { status = "actively-developed" }

[dependencies]
structopt = "0.2"
log = "0.4"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
assert_cmd = "0.10"
failure = "0.1"
skeptic = "0.13"
