[package]
name = "structopt-flags"
version = "0.3.4"
authors = ["Luca Pizzamiglio <luca.pizzamiglio@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["command-line-interface"]
keywords = ["clap","structopt","cli","flags"]
repository = "https://github.com/pizzamig/structopt-flags"
description = "Collection of reusable flags for StructOpt"
build = "build.rs"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "pizzamig/structopt-flags" }
maintenance = { status = "actively-developed" }

[features]
default = []

[dependencies]
structopt = "0.2"
log = "0.4"
simplelog = { version = "0.6", optional = true }

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
assert_cmd = "0.11"
escargot = "0.5"
failure = "0.1"
skeptic = "0.13"
predicates = "1"

[[example]]
name = "verbose_simplelog"
required-features = ["simplelog"]

[[example]]
name = "quiet_verbose_simplelog"
required-features = ["simplelog"]

[[example]]
name = "logopt_simplelog"
required-features = ["simplelog"]

[[example]]
name = "verbose_no_default_simplelog"
required-features = ["simplelog"]
