[package]
name = "structopt-flags"
version = "0.3.6"
authors = ["Luca Pizzamiglio <luca.pizzamiglio@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["command-line-interface"]
keywords = ["clap","structopt","cli","flags"]
repository = "https://github.com/pizzamig/structopt-flags"
description = "Collection of reusable flags for StructOpt"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "pizzamig/structopt-flags" }
maintenance = { status = "actively-developed" }

[features]
default = []

[dependencies]
structopt = "0.3"
log = "0.4"
simplelog = { version = "0.9", optional = true }

[build-dependencies]
skeptic = { git = 'https://github.com/andygauge/rust-skeptic'}

[dev-dependencies]
assert_cmd = "1"
escargot = "0.5"
skeptic = { git = 'https://github.com/andygauge/rust-skeptic'}
predicates = "1"
structopt = "0.3"

[[example]]
name = "verbose_simplelog"
required-features = ["simplelog"]

[[example]]
name = "quiet_verbose_simplelog"
required-features = ["simplelog"]

[[example]]
name = "logopt_simplelog"
required-features = ["simplelog"]

[[example]]
name = "verbose_no_default_simplelog"
required-features = ["simplelog"]
